Contrasting colors solved!

--- a/3 -.CSS-and-Typography-Exercise-Resources/06_Contrasting-Colors/styles.css
+++ b/3 -.CSS-and-Typography-Exercise-Resources/06_Contrasting-Colors/styles.css
@@ -1,1 +1,21 @@
 /* TODO: style the html */
+h1 {
+    font-family: Georgia, serif;
+}
+
+body {
+    font-family: Helvetica, sans-serif;
+    line-height: 1.5;
+    font-size: 18px;
+    background-color: white;
+}
+
+article {
+    margin: 54px 54px 54px 54px;
+    padding: 36px 36px 36px 36px;
+    border-radius: 16px;
+    text-indent: 40px;
+    color: white;
+    background-color: rgb(51, 102, 153);
+}
+
